add write functionality to chatbot